# django-rpg-api

./: .gitignore  README.md  pyproject.toml
src/djangoapi/: __init__.py
src/mysite/: settings.py  urls.py
src/mysite/static/dopetrope/assets/css/: main.css
src/polls/: admin.py  models.py  tests.py  urls.py  views.py
src/polls/migrations/: 0001_initial.py
src/polls/static/polls/: style.css
src/rpg_manager/: admin.py  api_urls.py  apps.py  models.py  urls.py  views.py
src/rpg_manager/migrations/: 0001_initial.py  0002_characterclass_archived_characterclass_character_and_more.py  0003_rename_character_characterclass_parent_character_and_more.py
src/rpg_manager/templates/: base.html
src/rpg_manager/templates/rpg_manager/: character_detail.html  character_form.html  index.html  player_detail.html
src/static_root/dopetrope/assets/css/: main.css
src/templates/dopetrope/: dope_base.html
