[project]
name            = "djangoapi"
version         = "0.1.0"
description     = "Add your description here"
dependencies    = [
    "django>=5.0.6",
    "psycopg>=3.1.19",
    "django-debug-toolbar>=4.4.2",
]
readme          = "README.md"
requires-python = ">= 3.8"

[project.scripts]
manage = 'manage:main'

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed          = true
dev-dependencies = [
    "ruff>=0.5.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/djangoapi"]
